--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
